changes recipe/create api route to /recipes and adds documentation
